# PawPal Pet Care App - UML Diagram (Final)

```mermaid
classDiagram
    class Owner {
        -name: String
        -id: int
        -pets: List~Pet~
        -scheduler: Scheduler
        +getName(): String
        +getPets(): List~Pet~
        +addPet(pet: Pet): void
        +removePet(pet: Pet): void
    }

    class Pet {
        -name: String
        -id: int
        -species: String
        -breed: String
        -tasks: List~Task~
        -medications: List~Medication~
        +getName(): String
        +getSpecies(): String
        +getBreed(): String
        +getTasks(): List~Task~
        +addTask(task: Task): void
        +removeTask(task: Task): void
        +getMedications(): List~Medication~
        +addMedication(med: Medication): void
        +removeMedication(med: Medication): void
    }

    class Task {
        -name: String
        -id: int
        -type: String
        -duration: int
        -recurring: Boolean
        -priority: String
        -description: String
        -status: String
        -frequency: String
        -petId: int
        +getName(): String
        +getType(): String
        +getDuration(): int
        +setDuration(duration: int): void
        +getPriority(): String
        +setPriority(priority: String): void
        +getDescription(): String
        +setDescription(description: String): void
        +getStatus(): String
        +setStatus(status: String): void
    }

    class Medication {
        -name: String
        -id: int
        -dosage: String
        -frequency: String
        -events: List~Event~
        +getName(): String
        +getDosage(): String
        +getFrequency(): String
    }

    class Schedule {
        -id: int
        -events: List~Event~
        +addEvent(event: Event): void
        +removeEvent(event: Event): void
        +getEvents(sort: Boolean): List~Event~
    }

    class Event {
        -id: int
        -datetime: DateTime
        -tasks: List~Task~
        +getDate(): Date
        +getTime(): Time
        +getTasks(): List~Task~
        +addTask(task: Task): void
        +removeTask(task: Task): void
    }

    class Scheduler {
        -id: int
        -schedules: List~Schedule~
        +getTasksByPet(pet: Pet): List~Task~
        +getTasksByOwner(owner: Owner): List~Task~
        +getTasksByStatus(owner: Owner, status: String): List~Task~
        +getTasksByPriority(owner: Owner, priority: String): List~Task~
        +getTasksByPetName(owner: Owner, petName: String): List~Task~
        +getUpcomingTasks(owner: Owner, window: int): List~Task~
        +markTaskComplete(task: Task, schedule: Schedule, pet: Pet): Task
        +reassignTask(task: Task, pet: Pet): void
        +addSchedule(schedule: Schedule): void
        +removeSchedule(schedule: Schedule): void
        +getSchedules(): List~Schedule~
        +getSchedule(scheduleId: int): Schedule
        +scheduleTask(task: Task, event: Event, schedule: Schedule, pets: List~Pet~): String
        +getTasksSortedByPriority(owner: Owner): List~Task~
        +sortByTime(tasks: List~Task~): List~Task~
    }

    Owner "1" --> "*" Pet
    Pet "1" --> "*" Task
    Task "*" --> "1" Pet : petId
    Pet "1" --> "*" Medication
    Medication "*" --> "*" Event : reminderEvents
    Schedule "1" --> "*" Event
    Event "1" --> "*" Task
    Owner "1" --> "1" Scheduler
    Scheduler "1" --> "*" Schedule
```

## Relationships

- **Owner has Pets**: One owner can own multiple pets (1-to-many)
- **Pet has Tasks**: One pet can have multiple tasks (1-to-many)
- **Task back-references Pet**: Each task carries a `petId` so it can be located and reassigned without scanning all pets
- **Pet takes Medications**: One pet can take multiple medications (1-to-many)
- **Medication has Events**: A medication links to zero or more reminder events on the schedule (many-to-many)
- **Owner uses Scheduler**: One owner has one scheduler (1-to-1) — the single entry point for all schedule and task operations; the direct `Owner → Schedule` link has been removed to avoid dual entry points
- **Scheduler manages Schedules**: One scheduler manages multiple schedules (1-to-many); use `getSchedule(scheduleId)` to retrieve a specific one
- **Schedule has Events**: One schedule contains multiple events (1-to-many)
- **Event has Tasks**: One event contains multiple tasks (1-to-many)
